Make Items draggable

--- a/src/components/Tree/tree.scss
+++ b/src/components/Tree/tree.scss
@@ -3,6 +3,10 @@
     &-header {
       cursor: pointer;
 
+      &--dragged-over {
+        background-color: lightblue;
+      }
+
       &__icon {
         margin-right: 5px;
       }
