--- a/src/components/Tree/tree.scss
+++ b/src/components/Tree/tree.scss
@@ -1,16 +1,47 @@
 .tree {
+  height: 100%;
+  width: 100%;
+
+  &--dragged-over {
+    background-color: lightblue;
+  }
+
   &-item {
     &-header {
+      display: flex;
       cursor: pointer;
+
+      &:hover {
+        background-color: lightgray;
+
+        .tree-item-header-toolbar {
+          opacity: 1;
+        }
+      }
 
       &--dragged-over {
         background-color: lightblue;
       }
 
-      &__icon {
-        margin-right: 5px;
+      &-label {
+        width: 100%;
+
+        &__icon {
+          margin-right: 5px;
+        }
+      }
+
+      &-toolbar {
+        display: flex;
+        align-items: flex-end;
+        opacity: 0;
+        
+        &__icon {
+          margin-right: 5px;
+        }
       }
     }
+
     &-children {
       margin-left: 10px;
     }
